# Robot2016

./: README.md  body_frame_error.cpp
body_frame_error/: CMakeLists.txt  package.xml
corrector_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dcm_com/: CMakeLists.txt  package.xml
donkey_exec/: CMakeLists.txt  package.xml  screen_rover
donkey_move/: CMakeLists.txt  CMakeLists.txt~  package.xml
donkey_rover/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
donkey_rover/LibRover/: BogieScanner.cc  BogieScanner.h  CANopenElmo.h  CANopenHelper.cc  CANopenHelper.h  CANopenMaster.cc  CANopenMaster.h  CMakeLists.txt  Doxyfile  Drive.cc  Drive.h  Makefile  Track.cc  Track.h  libRover.cc  libRover.h
donkey_rover/launch/: Madgwick.launch  assem.launch  assem.launch~  donkey_nav_stack.launch  donkey_nav_stack.launch~  donkey_nav_stack_move.launch  donkey_nav_stack_move.launch~  donkey_nav_stack_slam.launch  gmap.launch  imu.launch  imu.launch~  imu_filtered.launch  imu_filtered.launch~  joyrov.launch~  pcassem.launch  rovmap (copy).launch  rovmap.launch  rovmap.launch~  scan.launch
donkey_rover/msg/: Rover_Data.msg~  Rover_Power_Data .msg~  Rover_Power_Data.msg  Rover_Power_Data.msg~  Rover_Scanner.msg  Rover_Scanner.msg~  Rover_Track_Bogie_Angle.msg  Rover_Track_Bogie_Angle.msg~  Rover_Track_Speed.msg  Scanner_Command.msg  estimated_position.msg~  rover_data.msg~
donkey_rover/scripts/: flp.py~  follow (copy).py  follow.py  follow.py~  followperson.py~
donkey_rover/src/: rover_drive.cpp~  rover_joy.cpp~  rover_odom (17-03-2016).cpp  rover_odom (24-03-2016).cpp  rover_odom (copy).cpp  rover_odom (new).cpp~  rover_odom.cpp  rover_odom.cpp~  rover_scannerangle.cpp~  rovscanneranglecpp~  rovstate .cpp~  rovstate.cpp~  test_scanner.cpp~
donkey_rover_2dnav/: CMakeLists.txt  CMakeLists.txt~  amcl_diff.launch  base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml~  costmapexample.txt  donkey_rover_configuration.launch  donkey_rover_configuration.launch~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  move_base.launch  move_base.launch~  package.xml  package.xml~  screen_rover~  tstrover.launch  tstrover.launch~
fake_delegation/: CMakeLists.txt  package.xml  package.xml~
fake_gps_listener/: CMakeLists.txt  package.xml
follow_me/: CMakeLists.txt  package.xml
follow_person/: CMakeLists.txt  package.xml  package.xml~
icp/: CMakeLists.txt  package.xml
laser_to_pc/: CMakeLists.txt  package.xml  package.xml~
laserscan_to_pointcloud/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
lms1xx/: CMakeLists.txt  CMakeLists.txt~  package.xml
loam_laser/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
lrs_sherpa_rep/: .rosinstall  .rosinstall.bak  .rosinstall~
mms_rover/: CMakeLists.txt~
pc_object_finder/: CMakeLists.txt  package.xml
pc_snapshot/: CMakeLists.txt  package.xml
pcl_analyser/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pcl_segmentation/: CMakeLists.txt  CMakeLists.txt~  package.xml
position_estimator/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  (+1 more)
(+157 files in other folders)
